<?xml version="1.0"?>
<package format="3">
  <name>ayn</name>
  <version>0.0.1</version>
  <description>prototype</description>

  <maintainer email="htetwaiyan.zyme@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>ros2launch</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
